--- a/hello/pages/templates/register.html
+++ b/hello/pages/templates/register.html
@@ -1,20 +1,11 @@
-{% load static %}
-
+<!DOCTYPE html>
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}"/>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}"/>
-	<link rel="stylesheet" type="text/css" href="{% static 'ss/animate.css' %}"/>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/owl.carousel.css' %}"/>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
+  background-image: url(reg.jpg);
 }
 
 * {
@@ -23,7 +14,8 @@ body {
 
 /* Add padding to containers */
 .container {
-  padding: 16px;
+  border-radius: 5px;
+  padding: 10px;
   background-color: white;
 }
 
@@ -56,7 +48,7 @@ hr {
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 80%;
+  width: 100%;
   opacity: 0.9;
 }
 
@@ -74,39 +66,42 @@ a {
   background-color: #f1f1f1;
   text-align: center;
 }
+form { 
+margin: 0 auto; 
+width:400px;
+}
 </style>
 </head>
 <body>
 
-<form action="/register_submission/" method="post">
-    {% csrf_token %}
-  <div class="container">
-
-
-
-       <div class="alert alert-success" role="alert">
-  {{m}}
-</div>
-
-
+<form action="/action_page.php" >
+  <div class="container" style="width: 30rem;">
     <h1>Register</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
+    <label for="Name"><b>Name</b></label>
+    <input type="text" placeholder="Enter Name" name="name" required>
+    <label for="username"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="Username" required>
+    <label for="Adress"><b>Adress</b></label>
+    <input type="text" placeholder="Adress" name="Adress" required>
 
-    <label for="Username"><b>Username</b></label>
-    <input type="text" placeholder="Enter usernmae" name="Username" required>
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="Password" required>
+    <input type="password" placeholder="Enter Password" name="psw" required>
 
-
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <hr>
+    
 
     <button type="submit" class="registerbtn">Register</button>
   </div>
-
-  <div class="container signin">
-    <p>Already have an account? <a href="{% url 'login' %}">Sign in</a>.</p>
+  
+  <div class="container signin1 my-2" class="container my-2" style="width: 30rem;">
+    <p>Already have an account? <a href="#">Sign in</a>.</p>
   </div>
 </form>
 
