--- a/hello/pages/templates/register.html
+++ b/hello/pages/templates/register.html
@@ -83,7 +83,7 @@ width:400px;
     <input type="text" placeholder="Enter Name" name="name" required>
     <label for="username"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="Username" required>
-    <label for="Adress"><b>Adress</b></label>
+    <label for="Adress"><b>Address</b></label>
     <input type="text" placeholder="Adress" name="Adress" required>
 
     <label for="email"><b>Email</b></label>
