--- a/hello/pages/templates/index.html
+++ b/hello/pages/templates/index.html
@@ -101,7 +101,7 @@
             <DIV class="row rowsetting">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
                     <div class="imgsetting d-block m-auto"> <img src="static/icon/icons8-mobile-64.png" alt="MOBILE" srcset="" style="width:70px;height:70px; padding-top: 10px;" > </div>
-                    <h2>Mobile repair</h2>
+                    <h2><a href="{% url 'mob' %}">Mobile repair</a></h2>
                     <p>Mobile repairing services for all Branded smartphones & Tablets </p>
                 </div>
 
