--- a/hello/pages/templates/mob.html
+++ b/hello/pages/templates/mob.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html>
     <head><title> SMART CATCHERS</title>
-        <LINK rel="stylesheet" href="static/style.css" type="text/css">
+        <LINK rel="stylesheet" href="{% static '/mob/style.css' %}" type="text/css">
 
 
        <!-- Latest compiled and minified CSS -->
