--- a/hello/pages/templates/register.html
+++ b/hello/pages/templates/register.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(reg.jpg);
+  background-image: url({% static 'img/reg.jpg' %});
 }
 
 * {
