--- a/hello/pages/templates/register.html
+++ b/hello/pages/templates/register.html
@@ -102,7 +102,7 @@ width:400px;
   </div>
   
   <div class="container signin1 my-2" class="container my-2" style="width: 30rem;">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
+    <p>Already have an account? <a href="{% url 'login' %}">Sign in</a>.</p>
   </div>
 </form>
 
