--- a/hello/pages/templates/login.html
+++ b/hello/pages/templates/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -86,7 +85,7 @@ span.psw {
 </head>
 <body>
   <form action="action_page.php" method="post">
-  <div><h3>Login</h3></div>
+  <div><h3 style="text-align:center; " >Login</h3></div>
   <div class="container">
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
@@ -102,7 +101,8 @@ span.psw {
 
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <span class="psw"> <a href="#">Forgot password?</a></span>
   </div>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </form>
 </body>
