--- a/hello/pages/templates/register.html
+++ b/hello/pages/templates/register.html
@@ -1,10 +1,23 @@
-{% extends 'sample.html' %}
-{% block title %}Register{% endblock %}
+<!DOCTYPE html>
+{% load static %}
+<html>
+<head>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(static/img/reg.jpg);
+  background-image: url({% static 'img/reg.jpg' %});
 }
 
 * {
@@ -70,44 +83,41 @@ margin: 0 auto;
 width:400px;
 }
 </style>
-{% block body %}
-
-
+</head>
+<body>
 <div class="alert alert-danger" role="alert">
- IF already registered please sign in
+ IF already registered please <a href="{% url 'login' %}">Sign in</a>
 </div>
 {% if m %}
 {{m|safe}}
 {% endif %}
-<form action="{% url 'register_submission' %}" >
+<form action="{% url 'register_submission' %}" method="POST">{% csrf_token %}
   <div class="container" style="width: 30rem;">
     <h1>Register</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
     <label for="Name"><b>Name</b></label>
-    <input type="text" placeholder="Enter Name" name="name" required>
+    <input type="text" placeholder="Enter Name" name="name"  {% if name %} value={{name}} {% endif %}required >
     <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="Username" required>
-    <label for="Adress"><b>Address</b></label>
-    <input type="text" placeholder="Adress" name="Adress" required>
+    <input type="text" placeholder="Enter Username" name="Username" required>{% if username %}{{username}}{% endif %}
+    <label for="Address"><b>Address</b></label>
+    <input type="text" placeholder="Address" name="Address" required>{% if address %}{{address}}{% endif %}
 
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    <input type="text" placeholder="Enter Email" name="email" required>{% if email %}{{email}}{% endif %}
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <label for="psw_repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw_repeat" required>
     <hr>
-    
 
     <button type="submit" class="registerbtn">Register</button>
   </div>
   
-  <div class="container signin1 my-2" class="container my-2" style="width: 30rem;">
-    <p>Already have an account? <a href="{% url 'login' %}">Sign in</a>.</p>
-  </div>
+
 </form>
 
-{% endblock %}
+</body>
+</html>
