--- a/hello/pages/templates/last.html
+++ b/hello/pages/templates/last.html
@@ -19,6 +19,17 @@ body {
   padding: 10px;
   background-color: white;
 }
+textarea {
+
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+
+   resize: none;
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password],input[type=Date],input[type=time] {
@@ -78,7 +89,7 @@ width:400px;
     <p>Please fill following details</p>
     <hr>
     <label for="Address"><b>Address</b></label>
-    <input type="text" placeholder="Address" name="Address"  {% if address %} value={{address}} {% endif %} required>
+    <input type="textarea" placeholder="Enter your permanent Address" name="Address"  {% if address %} value={{address}} {% endif %} required>
     <label for="Description"><b>Description</b></label>
     <input type="text" placeholder="Write in brief about the problem in your device" name="Description" required>
     <label for="Date"><b>Choose a Date for service</b></label>
