--- a/hello/pages/templates/last.html
+++ b/hello/pages/templates/last.html
@@ -83,26 +83,31 @@ width:400px;
 </head>
 <body>
 
-<form action="/action_page.php" >
+<form action="{% url 'last_submission' %}" method="POST">{% csrf_token %}
   <div class="container" style="width: 30rem;">
-    <h1>Last</h1>
-    <p>Please fill following details</p>
+    <h3> Fill following details</h3>
+
     <hr>
     <label for="Address"><b>Address</b></label>
-    <textarea placeholder="Enter your permanent Address" name="Address" required>  {% if address %} {{address}} {% endif %}</textarea>
+    <textarea rows="1" placeholder="Enter your permanent Address" name="Address" required>  {% if address %} {{address}} {% endif %}</textarea>
     <label for="Description"><b>Description</b></label>
-    <input type="text" placeholder="Write in brief about the problem in your device" name="Description" required>
-    <label for="Date"><b>Choose a Date for service</b></label>
-    <input type="Date" id="Date" name="Date" required>
-    <label for="appt"><b>Choose a time for your meeting:</b></label>
-    <input type="time" id="appt" name="appt" min="09:00" max="18:00" required>
+    <input type="text" placeholder="Write in brief about the problem in your {{address}} device" name="Description" required>
+   <label for="email"><b>Email</b></label>
+    <input type="email" placeholder="name@gamil.com" name="email" required>
+    <label for="Date1"><b>Choose a Date for service</b></label>
+    <input type="Date" id="Date1" name="Date" required>
+    <label for="appt2"><b>Choose a time for your service</b></label>
+    <input type="time" id="appt2" name="appt" min="09:00" max="18:00" required>
     <small>Office hours are 9am to 6pm</small>
     <br>
     <br>
-    <label for="psw"><b>Password</b></label>
+  <!--  <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>    
+-->
+     <input type="hidden" id="custId" name="name" value="{{name}}">
+     <input type="hidden"  name="model" value="{{model}}">
 
-    <button type="submit" class="registerbtn">Book Now</button>
+    <button type="submit" class="registerbtn" value="{{val}}" name="val" >Book Now</button>
   </div>
   
 </form>
