--- a/hello/pages/templates/mob.html
+++ b/hello/pages/templates/mob.html
@@ -91,14 +91,19 @@
 	<div class="modal-contents">
 
 		<div class="close">+</div>
-		<form action="{% url 'register' %}" method="post">
+		<form action="{% url 'register_d' %}" method="post">
 {% csrf_token %}
+           <input type="hidden" id="mobile" name="mobile" value="mobile">
 <select name="dropdown">
 	<option selected="selected" disabled>Select Your Brand</option>
   <option value="iphone">iphone</option>
   <option value="Realme">Realme</option>
   <option value="Vivo">Vivo</option>
   <option value="oppo">oppo</option>
+  <option value="Redmi">Redmi</option>
+  <option value="Google">Google</option>
+  <option value="samsung">samsung</option>
+
   </select>
             <button type="submit" class="btn btn-success">Success</button>
 </form>
