--- a/hello/pages/templates/last.html
+++ b/hello/pages/templates/last.html
@@ -93,7 +93,7 @@ width:400px;
     <label for="Description"><b>Description</b></label>
     <input type="text" placeholder="Write in brief about the problem in your {{address}} device" name="Description" required>
    <label for="email"><b>Email</b></label>
-    <input type="email" placeholder="name@gamil.com" name="email" required>
+    <input type="text" placeholder="Please enter a valid email address" name="email" required>
     <label for="Date1"><b>Choose a Date for service</b></label>
     <input type="Date" id="Date1" name="Date" required>
     <label for="appt2"><b>Choose a time for your service</b></label>
