--- a/hello/pages/templates/agents.html
+++ b/hello/pages/templates/agents.html
@@ -1,5 +1,5 @@
 {% extends 'sample.html' %}
-{% block title %}LOG {% endblock %}
+{% block title %}Agents {% endblock %}
  {% block style %} <style> .example-table th { padding: 15px; } </style> {% endblock %}
 
 
