--- a/hello/pages/templates/index.html
+++ b/hello/pages/templates/index.html
@@ -71,7 +71,7 @@
                                 <a href="" class="nav-link js-scroll-trigger text-white">CONTACT</a>
                             </li>
                             <li class="navbar-item "> 
-                                    <a href="" class="nav-link js-scroll-trigger text-white">PROFILES</a>
+                                    <a href="{% url 'prologin' %}" class="nav-link js-scroll-trigger text-white">Agent login</a>
                                 </li>
                    </ul>
 
