--- a/hello/pages/templates/last.html
+++ b/hello/pages/templates/last.html
@@ -105,9 +105,9 @@ width:400px;
     <input type="password" placeholder="Enter Password" name="psw" required>    
 -->
      <input type="hidden" id="custId" name="name" value="{{name}}">
-     <input type="hidden"  name="model" value="{{model}}">
+     <input type="hidden"  name="brand" value="{{brand}}">
 
-    <button type="submit" class="registerbtn" value="{{val}}" name="val" >Book Now</button>
+    <button type="submit" class="registerbtn" value="{{service}}" name="service" >Book Now</button>
   </div>
   
 </form>
