--- a/hello/pages/templates/login.html
+++ b/hello/pages/templates/login.html
@@ -88,12 +88,12 @@ span.psw {
   <div><h3 style="text-align:center; " >Login</h3></div>
   <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username {{val}}" name="uname" required>
+    <input type="text" placeholder="Enter Username" name="uname" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
- <input type="hidden" id="custId" name="model" value="{{model}}">
-    <button type="submit" name="but" value={{val}}>Login</button>
+ <input type="hidden" id="custId" name="brand" value="{{brand}}">
+    <button type="submit" name="service" value={{service}}>Login</button>
 
   </div>
 
